@@ -27,7 +27,7 @@
 
 BEGIN {
 
-$main::VERSION='0.9999999945';
+$main::VERSION='0.9999999946';
 
 # ASCII BANNER Courtesy of:  http://www.network-science.de/ascii/
 my $fa_banner=<<END;
@@ -262,6 +262,8 @@ END
       my $can_tm='';
       eval { require Data::Password::Check };
       if ((-1<index $main::amazon,'amazon') && ($@!~/^\s*$/)) {
+         exec 'sudo','perl','Makefile.PL','SKIP' unless
+            grep  { /SKIP/ } @ARGV;
          my $meminfo=`cat /proc/meminfo`;
          my $memtotal=$meminfo;
          my $memfree=$meminfo;
@@ -681,7 +683,7 @@ END
       my $dpkg=`/bin/dpckg -l`;
       my $update_flag=0;
       if (-1==index $dpkg,'build-essential') {
-         open(AG,"sudo apt-get -y update'|");
+         open(AG,"sudo apt-get -y update|");
          while (my $line=<AG>) {
             print $line;
          }
@@ -695,7 +697,7 @@ END
       }
       if (-1==index $dpkg,'libssl-dev') {
          unless ($update_flag) {
-            open(AG,"sudo apt-get -y update'|");
+            open(AG,"sudo apt-get -y update|");
             while (my $line=<AG>) {
                print $line;
             }
