@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d99990415553bfcb2fbfe0d7246ee32c4ef8eb4a ChangeLog
+SHA1 89cddad53f5b911c36cf73069dfb946279f4a818 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 40402deb763ec720f2f080ffeb770c12eb64b7dd META.yml
-SHA1 b8f0f85ca85494a3827f989ddacbae6878b06a93 Makefile.PL
+SHA1 51a62782d07a5fabf2626fe21288ddb811840b13 META.yml
+SHA1 acd55da035397f8ec7afa351e42395523890f755 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
+SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
 SHA1 967864161cdddec872e6ea5fc18c37776cb1641a bin/install_mozrepl_plugin.exe
 SHA1 a0d5dfdc1172c70fe1760e351024287e23eea486 inc/Module/AutoInstall.pm
 SHA1 61da5f5b15bb5e3ed01095d3b826a606513c4418 inc/Module/Install.pm
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 36f294d55408695bc852deadba1051d9fdad3d83 lib/Net/FullAuto.pm
+SHA1 71479b99d4ef1e9aefd238b3f55e6a13a6736a70 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTwX8xAAoJEBa/9Pad787E3RgIAJtcC6hrjoU6hTEP761u1Brn
-IJ83lmXEU9Ycc4ut6mo0iRrsDLeznERHgWMe9OzwZ4vWQRQAPnpfKGIrgFY68JU8
-/KurCM9yDYbwIfhs0RXShABYdiN8dh99OWmgOgyFqnmjZBMtdWGdO9nRy1Vm8LGH
-s9F4QC1uttTVwn+rL6KQ97Cu1i1ugtdJ+wJSfpDPxs5j3tMSwmuSZn4BuAJ+qHQc
-es7HtNnZ49oUPe/8n5URWUKn7rQ08K4Vp2nUspt3+YRYSCIoAmjcku3mwmaS/AyJ
-7qtlF28P1LkQWD2sVzVmay67OPHn51GUCJC5CoqSNyWZu2/POFRBELOTd13h2uU=
-=FOFP
+iQEcBAEBAgAGBQJTweUXAAoJEBa/9Pad787E3XYH/06TPFDlpTu2vexce+Im5wAB
+cbJKsrbcVmvTuO6OWOu6OgPhGIB97FblNk5bkoADtQcde6H/H8jYIkm5me3sjeX1
+kkiXMN8XRQV2nnqFBLq/A9X6f2OYl4Se7JmTpX89Or4UXdlgSUvq+jCMNPD8ovyK
+OSEq5Ior81TVvh9r3l/OZKQOpPqdCoRR6gCBNCXDwRY06WU2o5CASc94ldUgIdEp
+827+9005pobG2qzc3W40Z+6JxCbUKibRp17AY0gtQsGt2LUWZEpthx5osVgdT+pb
+CqERGTElr4WnONXj0L8acOE/rTGN8x5wMfus/qeEBwf4wRaKubQ/fl8FQWnxlVw=
+=wF5e
 -----END PGP SIGNATURE-----
