@@ -22,6 +22,15 @@
 
 2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999946 released.
+
+        * Released last version without new fullauto.pl :-( .
+
+        * Added exec when amazon.
+
+
+2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999945 released.
 
         * Released last version without new FA_Core.pm :-( .
